[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "rainbowrl"
version = "0.0.12"
authors = [
  { name="Taha Shieenavaz", email="tahashieenavaz@gmail.com" },
]
description = "An efficient, easy implementation of Rainbow DQN agent."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["numpy", "torch", "rltrees", "atarihns", "atarihelpers"]
keywords = ["deep reinforcement learning", "drl", "rainbow", "dqn"]
license = { file = "LICENSE" }
urls = { Homepage="https://github.com/tahashieenavaz/rainbowrl", Repository="https://github.com/tahashieenavaz/rainbowrl", Documentation="https://github.com/tahashieenavaz/rainbowrl#readme" }

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
rainbowrl = ["*.md", "*.txt"]
