[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "rainbowdqn"
version = "0.0.25"
authors = [
  { name="Taha Shieenavaz", email="tahashieenavaz@gmail.com" },
]
description = "An efficient, easy implementation of Rainbow DQN agent."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["numpy", "torch", "rltrees", "atarihns", "atarihelpers", "baloot"]
keywords = ["deep reinforcement learning", "drl", "rainbow", "dqn"]
license = { file = "LICENSE" }
urls = { Homepage="https://github.com/tahashieenavaz/rainbowdqn", Repository="https://github.com/tahashieenavaz/rainbowdqn", Documentation="https://github.com/tahashieenavaz/rainbowdqn#readme" }

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
rainbowdqn = ["*.md", "*.txt"]
